--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+#folder
 .svn/
 .git/
 .metadata/
@@ -9,3 +10,47 @@ bin/
 build/
 ipch/
 obj/
+
+#file
+*-odb.cpp
+*-odb.cxx
+*-odb.h
+*-odb.hxx
+*-odb.ixx
+*-odb.sql
+*.a
+*.al
+*.aps
+*.bz2
+*.git
+*.gz
+*.ilk
+*.la
+*.ldb
+*.lo
+*.o
+*.obj
+*.opensdf
+*.pch
+*.pdb
+*.pyc
+*.pyo
+*.rej
+*.res
+*.sdf
+*.so.[0-9]
+*.suo
+*.svn
+*.tlog
+*.user
+*.vcxproj.user
+*.zip
+*_i.c
+*_i.h
+*.DS_Store
+*.libs
+*.project
+*.pydevproject
+*desktop.ini
+*~.doc
+*~.docx
