--- a/StudyCSharp/StudyCSharp.csproj
+++ b/StudyCSharp/StudyCSharp.csproj
@@ -54,6 +54,7 @@
       <HintPath>..\packages\Newtonsoft.Json.Schema.3.0.10\lib\net45\Newtonsoft.Json.Schema.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -65,9 +66,11 @@
   <ItemGroup>
     <Compile Include="DiagnosticPractices.cs" />
     <Compile Include="JsonDotNet.cs" />
+    <Compile Include="MefPractices.cs" />
     <Compile Include="Models.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectionPractices.cs" />
     <Compile Include="TaskBasedAsynchronousPattern.cs" />
     <Compile Include="UnixTimestampConverter.cs" />
     <Compile Include="WebClient.cs" />
