--- a/StudyCSharp/packages.config
+++ b/StudyCSharp/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Newtonsoft.Json.Schema" version="3.0.10" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net461" />
 </packages>
