--- a/StudyCSharp/StudyCSharp.csproj
+++ b/StudyCSharp/StudyCSharp.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionPractices.cs" />
+    <Compile Include="RxPractices.cs" />
     <Compile Include="TaskBasedAsynchronousPattern.cs" />
     <Compile Include="UnixTimestampConverter.cs" />
     <Compile Include="WebClient.cs" />
