--- a/StudyCSharp/App.config
+++ b/StudyCSharp/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -9,7 +9,7 @@
       <source name="TraceSourceApp" switchName="SwitchOne" switchType="System.Diagnostics.SourceSwitch">
         <listeners>
           <add name="console" type="System.Diagnostics.ConsoleTraceListener">
-            <filter type="System.Diagnostics.EventTypeFilter" initializeData="Verbose"/>
+            <filter type="System.Diagnostics.EventTypeFilter" initializeData="Verbose" />
           </add>
           <!--<add name="myListener"/>-->
         </listeners>
@@ -18,7 +18,7 @@
     <!--example: System.Diagnostics.TraceSwitch myTraceSwitch = new System.Diagnostics.TraceSwitch("SwitchOne", "The first switch");-->
     <!--System.Diagnostics.BooleanSwitch myBooleanSwitch = new System.Diagnostics.BooleanSwitch("SwitchOne", "The first switch");-->
     <switches>
-      <add name="SwitchOne" value="Verbose"/>
+      <add name="SwitchOne" value="Verbose" />
       <!--value's type: System.Diagnostics.TraceLevel-->
     </switches>
     <!--<sharedListeners>
@@ -27,4 +27,12 @@
             </add>
         </sharedListeners>-->
   </system.diagnostics>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
