--- a/StudyCSharp/packages.config
+++ b/StudyCSharp/packages.config
@@ -4,9 +4,10 @@
   <package id="Microsoft.Reactive.Testing" version="4.1.5" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="Newtonsoft.Json.Schema" version="3.0.11" targetFramework="net461" />
-  <package id="System.Reactive" version="4.1.5" targetFramework="net461" />
+  <package id="System.Reactive" version="4.2.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="TA-Lib" version="0.5.0.3" targetFramework="net461" />
 </packages>
