--- a/MyTaLib/MyTaLib.csproj
+++ b/MyTaLib/MyTaLib.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Mapster" Version="4.1.1" />
+  </ItemGroup>
+
 </Project>
